--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     >
+    <link rel="icon" type="image/x-icon" href="./assets/img/retail.svg">
   </head>
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
