--- a/product5.html
+++ b/product5.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campers | Tent</title>
-    <link rel="stylesheet" href="assets/css/variables.css" >
-    <link rel="stylesheet" href="assets/css/defaults.css" >
-    <link rel="stylesheet" href="assets/css/navbar.css" >
-    <link rel="stylesheet" href="assets/css/media_queries.css" >
-    <link rel="stylesheet" href="assets/css/slideshow.css" >
-    <link rel="stylesheet" href="assets/css/styles.css" >
+    <link rel="stylesheet" href="assets/css/variables.css" />
+    <link rel="stylesheet" href="assets/css/defaults.css" />
+    <link rel="stylesheet" href="assets/css/navbar.css" />
+    <link rel="stylesheet" href="assets/css/media_queries.css" />
+    <link rel="stylesheet" href="assets/css/slideshow.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    >
+    />
+    <link rel="icon" type="image/x-icon" href="./assets/img/retail.svg" />
   </head>
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
@@ -54,7 +55,7 @@
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
                         width="500"
                         height="500"
-                      >
+                      />
                       <div class="text">Caption Text</div>
                     </div>
                     <div class="mySlides fade">
@@ -64,7 +65,7 @@
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
                         width="500"
                         height="500"
-                      >
+                      />
                       <div class="text">Caption Two</div>
                     </div>
                     <div class="mySlides fade">
@@ -74,14 +75,14 @@
                         src="http://wallpapercave.com/wp/wp1857443.jpg"
                         width="500"
                         height="500"
-                      >
+                      />
                       <div class="text">Caption Three</div>
                     </div>
 
                     <a class="prev prev-1" onclick="plusSlides(-1)">❮</a>
                     <a class="next next-1" onclick="plusSlides(1)">❯</a>
                   </div>
-                  <br >
+                  <br />
                   <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -98,11 +99,11 @@
     <header>
       <div class="nav-wrapper">
         <div class="logo-container">
-          <img class="logo" src="assets/img/retail.svg" alt="Logo" >
+          <img class="logo" src="assets/img/retail.svg" alt="Logo" />
           <h3 class="logo-text">Campers</h3>
         </div>
         <nav>
-          <input class="hidden" type="checkbox" id="menuToggle" >
+          <input class="hidden" type="checkbox" id="menuToggle" />
           <label class="menu-btn" for="menuToggle">
             <div class="menu"></div>
             <div class="menu"></div>
@@ -140,12 +141,12 @@
       <div class="product-wrapper row mt-1">
         <div class="col-6 product-detail mt-1 mb-1">
           <div>
-            <h2>Tent</h2>
-            <p class="text-fade">DescriptionDescriptionDescription</p>
+            <h2>Premium First Aid Kit</h2>
+            <p class="text-fade">Description</p>
             <h4>$149.99</h4>
             <div class="count-wrapper mt-1">
               <button class="btn btn-primary">-</button>
-              <input type="text" value="1" >
+              <input type="text" value="1" />
               <button class="btn btn-primary">+</button>
             </div>
             <div class="text-center">
@@ -156,30 +157,32 @@
         <div class="col-6">
           <img
             class="product-image"
-            src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
-            alt="Tent"
-          >
+            src="https://m.media-amazon.com/images/I/91QrPtq-ceL._AC_SL1500_.jpg"
+            alt="Premium First Aid Kit"
+            width="500"
+            height="500"
+          />
           <div class="img-flex">
             <div>
               <img
                 class="product-image"
-                src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
+                src="https://m.media-amazon.com/images/I/61k5wDnZpPL._AC_SL1000_.jpg"
                 alt="Tent"
-              >
+              />
             </div>
             <div>
               <img
                 class="product-image"
-                src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
+                src="https://m.media-amazon.com/images/I/61gfgVaNhqL._AC_SL1000_.jpg"
                 alt="Tent"
-              >
+              />
             </div>
             <div>
               <img
                 class="product-image"
-                src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
+                src="https://m.media-amazon.com/images/I/81IfLBf0MSL._AC_SL1000_.jpg"
                 alt="Tent"
-              >
+              />
             </div>
           </div>
         </div>
@@ -225,7 +228,15 @@
             <p>123, Main Street, Your City, Your Country</p>
             <p>Phone: +123 456 7890</p>
             <div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.5441490457433!2d96.13509161544958!3d16.848955788403387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19492c4bbe131%3A0x974ebe72a63ebb40!2sPyay%20Rd%2C%20Yangon!5e0!3m2!1sen!2smm!4v1673330755963!5m2!1sen!2smm" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.5441490457433!2d96.13509161544958!3d16.848955788403387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19492c4bbe131%3A0x974ebe72a63ebb40!2sPyay%20Rd%2C%20Yangon!5e0!3m2!1sen!2smm!4v1673330755963!5m2!1sen!2smm"
+                width="300"
+                height="300"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
         </div>
